# Kinesin-Engine

./: .gitattributes  CMakeLists.txt  build.sh  main.c
.cache/clangd/index/: context.c.DABF3D86F04FD1BE.idx  earth_moon.c.BCBF36D6C42DA36F.idx  eathMoon.c.2BA8AFD8DCB30EE3.idx  egl_context.c.6F8C56FE1C36A919.idx  fps.c.AF67F09D3B56BBCA.idx  glfw3.h.D6A85C32F1CA7ED7.idx  glfw3native.h.B26F7B0F77642CDA.idx  glx_context.c.D02F4E0B977CC260.idx  init.c.8983DE5A7B846577.idx  input.c.73BCE7E51109DE65.idx  internal.h.2BC8308F337DE48D.idx  ke_camera.c.3E7B64A4D7B5B0E4.idx  ke_camera.h.D329D167C3852ADB.idx  ke_math.c.45E8C6A2D4522D73.idx  ke_math.h.19DD6A1CC5999D55.idx  ke_physics.c.D120DDA00AA85902.idx  ke_physics.h.8B3C3128FD379F60.idx  ke_render.c.84B61B5C8F0F5417.idx  ke_render.h.8E3D95040B1165CF.idx  ke_renderer.c.21403BC4F868DEF1.idx  ke_renderer.h.A298067CD2C0F03D.idx  ke_shader.c.98AB6E54B7C3EEBA.idx  ke_shader.h.EA518AD74CBFD0CF.idx  ke_shapes.c.D5DFBAA260FA68B5.idx  ke_shapes.h.C1CAE19BDA911CDD.idx  ke_texture.c.B8D575DC3AE421DC.idx  ke_texture.h.6E6FAFD358C133A5.idx  ke_transform.c.E27E2B51E2110FB5.idx  ke_transform.h.76D37DCFA8BC2B45.idx  ke_window.c.6B82D46F3E6C066C.idx  ke_window.h.8A3815B0A4995BDD.idx  kinesin.h.619B056714915B7D.idx  linux_joystick.c.3D23A966E8CB3B56.idx  linux_joystick.h.0F7E01E896379523.idx  mappings.h.86AE1272ADFC9C4C.idx  monitor.c.F0F4CFCFDD4EBC87.idx  null_init.c.C471FF57F7F921B1.idx  null_joystick.c.E6703284E05C9931.idx  null_joystick.h.BD8AFF861550586F.idx  (+32 more)
examples/: \  earth_moon.c  eathMoon.c  fps.c  hellowindow.c  rolling_ball.c  rotatingCube.c  rotatingSphere.c
resources/shaders/: colorful.fs  colorful.vs
shaders/: colorful.fs  colorful.vs
src/: \  gl.c  ke_camera.c  ke_camera.h  ke_math.c  ke_math.h  ke_physics.c  ke_physics.h  ke_render.c  ke_render.h  ke_renderer.c  ke_renderer.h  ke_shader.c  ke_shader.h  ke_shapes.c  ke_shapes.h  ke_texture.c  ke_texture.h  ke_transform.c  ke_transform.h  ke_window.c  ke_window.h  main.c  se_gl.c  se_gl.h  shader.c  shader.h  window.c  window.h
src/src/: glad.c
